--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -83,6 +83,7 @@
     <script>
         $(function () {
 
+// 홈 화면 추가동작 (alert)
             $(window).on("load", function () {
                 let alertMessage = $("#globalAlertMessage").data("alertmessage");
                 let isLogout = $("#globalAlertMessage > #isLogout").data("islogout");
@@ -90,15 +91,13 @@
                 // console.log("alertMessage = " + alertMessage + " isLogout = " + isLogout);
 
                 if (alertMessage) {
-                    // 홈 화면 추가동작
                     if (alertMessage == "oauth2_add") {
                         if (confirm("해당 소셜 계정으로 가입된 회원이 없습니다. 가입 하시겠습니까?")) {
                             location.replace("/member/add-oauth");
                         } else {
                             location.replace("/logout");
                         }
-                        // 이상하게 return 안하면 아래까지 실행하고 이동하려고 함;
-                        return;
+                        return false;
                     }
 
                     alert(alertMessage);
@@ -108,13 +107,12 @@
                 }
             })
 
-
+// 검색 클릭 (submit)
             let searchForm = $("#searchForm");
             $("#searchForm>button").on("click", function (event) {
                 event.preventDefault();
 
                 // option 확인 .find("selector")
-                // 0, -0, null, false, NaN, undefined, "" 을 제외한 모든 값은 true 다 (비어있지 않은 객체 포함)
                 if (!searchForm.find("option:selected").val()) {
                     alert("검색종류를 선택하세요");
                     return false;
@@ -129,12 +127,11 @@
                 searchForm.submit();
             })
 
-            // 페이지네이션 액티브를 위한 변수
+// 페이지네이션 액티브
             let currentPage = $("#pageInfo>input:first-child").attr("value");
             let startNum = $(".page-link-number:first-child").attr("data-pagenum");
             // console.log("curentPage = " + currentPage + " startNum = " + startNum)
 
-            // 페이지네이션 액티브
             if(currentPage != null) {
                 $(".page-item-number").each(function () {
                     if (startNum == currentPage) {
@@ -144,7 +141,7 @@
                 })
             }
 
-            // 페이지네이션 링크 클릭
+// 페이지네이션 링크 클릭
             $(".page-link").on("click", function (event) {
                 event.preventDefault();
 
@@ -153,7 +150,7 @@
                 // option 값 확인
                 let option = $("#pageInfo>input[name = 'option']").val();
 
-                // option 없음 = 검색 안함 (url 빈 파라미터 지우기)
+                // option 없음 = 검색 안함 -> url 빈 파라미터 지우기
                 if (!option) {
                     $("#pageInfo>input.searching").remove();
                 }
@@ -161,7 +158,7 @@
                 $("#pageInfo").submit();
             })
 
-            // 읽기 링크 클릭
+// 읽기 링크 클릭
             $(".readLink").on("click", function (event) {
                 event.preventDefault();
                 let params = location.search;
@@ -219,14 +216,12 @@
             </tr>
             </thead>
             <tbody>
-            <!-- BoardController.pagedList() 에서 Model 객체에 "pageMaker" 바인딩하여 전달됨 -->
             <tr th:each="item : ${boardList}"
                 th:with="currentPage=${param.currentPage == null} ? 1 : ${param.currentPage}">
                 <!-- totalCount - cri.contentPerPage * (currentPage - 1) - i -->
                 <td id="boardNum" th:text="${pageMaker.totalCount - criteria.contentPerPage * (pageMaker.currentPage - 1) - itemStat.index}">id</td>
 
                 <td>
-                    <!-- if(Category == ALL) categoryCode = "" ;-->
                     <span class="category-label" th:if="${pageMaker.categoryCode == 'all'}" th:text="${'[' + item.category.getCategoryName() + ']'}"></span>
                     <a class="readLink" href="read.html" th:href="@{|/board/${item.id}|}"
                        th:text="${item.title}">title</a>
@@ -255,7 +250,6 @@
                    th:data-pageNum="${(pageMaker.startPageNum)-1}" class="page-link">&laquo;</a>
             </li>
             <!-- ${#numbers.sequence(from,to,[step])} 단순반복 numbers 유틸리티 클래스 배열 생성후 사용 -->
-            <!--    <li th:each="num : ${#numbers.sequence(${pageMaker.startPageNum},${pageMaker.endPageNum})}">-->
             <li class="page-item page-item-number" th:each="num : ${#numbers.sequence(pageMaker.startPageNum, pageMaker.endPageNum)}">
                 <a href="list.html" th:text="${num}" th:data-pagenum="${num}"
                    class="page-link page-link-number"> 페이지번호 </a>
@@ -278,8 +272,6 @@
 
     <!-- 검색창 -->
     <div class="row justify-content-center input-group" style="clear:right;width:500px;margin:auto">
-        <!-- th:action 태그는 javascript 를 통해 submit 할떄 적용되지 않는 것으로 보임 -->
-        <!-- method = get 이므로 form 데이터가 queryString 에 붙어나감 -->
         <form id="searchForm" action="/boards" method="get"
               th:action="@{/boards}" th:object="${criteria}">
             <input type="hidden" name="currentPage" value="1">
@@ -308,10 +300,4 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
 </body>
-
-<!-- 메모
-url 이동 표현식례
-th:href="@{/basic/items/{itemId(itemId=${item.id}, query='test')}"
-생성 링크: http://localhost:8080/basic/items/1?query=test
--->
 </html>
